--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@
   --color-blue500: #0070f3;
   --color-white: #ffffff;
   --color-black: #000000;
+  --color-red500: #f21361;
+  --color-red600: #d00d65;
+  --color-red800: #8c065c;
+  --color-red900: #3c0216;
+  --color-yellow500: #f5a623;
+  --color-yellow900: #3d2705;
 }
 
 body {
