--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -14,6 +14,11 @@
   opacity: 0.9;
 }
 
+.button:disabled {
+  pointer-events: none;
+  opacity: 0.7;
+}
+
 .buttonError {
   background-color: var(--color-red900);
   color: var(--color-red500);
