Add success variant in button

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -28,3 +28,8 @@
   background-color: var(--color-yellow900);
   color: var(--color-yellow500);
 }
+
+.buttonSuccess {
+  background-color: var(--color-green900);
+  color: var(--color-green500);
+}
