--- a/src/components/PairingModal/styles.module.css
+++ b/src/components/PairingModal/styles.module.css
@@ -34,6 +34,11 @@
 .url {
   font-size: 16px;
   color: var(--color-blue500);
+  text-decoration: none;
+}
+
+.url:hover {
+  opacity: 0.8;
 }
 
 .heading {
