--- a/src/components/ShowWallet/styles.module.css
+++ b/src/components/ShowWallet/styles.module.css
@@ -1,3 +1,10 @@
+.root {
+  height: calc(100% - 100px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .title {
   color: var(--color-white);
   text-align: center;
@@ -23,4 +30,10 @@
 
 .formContainer > button {
   width: auto;
+}
+
+.actionButtonContainer {
+  display: flex;
+
+  gap: 20px;
 }
